<resources>
    <string name="app_name">SPADE</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for development of this project -->
    <string name="welcomeText">Welcome to the Stool Parasite Detector!</string>
    <string name="appExplanationText">This App allows the user to submit images taken with a
        microscope, in order to detect the presence of parasites in human stool samples. This App is
        intended to help pharmacists and student in this type of analysis.</string>
    <string name="readyText">Are you ready? Tap the \"START\" button to begin!</string>
    <string name="startButtonText">START</string>
    <string name="howToText">How does the App work?</string>
    <string name="howItWorksButtonText">How it works</string>
    <string name="whichParasitesText">Which parasites can be detected?</string>
    <string name="listOfParasitesButtonText">List Of Parasites</string>
    <string name="takePictureButtonText">Take Picture</string>
    <string name="uploadPictureButtonText">Upload Picture</string>
    <string name="savePictureButtonText">Save Picture</string>
    <string name="pictureOptionsText">You have 2 options: you can either take a picture with your
        Camera, or you can upload one from your Camera Roll. The choice is yours! \n\n\nBUT REMEMBER:
        your picture has to meet certain specifications in order to be correctly analysed by the
        algorithm.
    </string>
    <string name="howItWorksText">This App makes use of a machine learning algorithm to automatically
        detect parasites in stool samples. \n\nThe App requires a .jpg image taken at 40x, which is
        sent to the algorithm in order to be meticulously analysed and processed. If everything goes
        according to plan, you will see the same picture displayed, but with annotations surrounding
        the microorganisms which were found by the algorithm. \n\nAfter that, the annotated image
        will be saved to a database for research purposes, and you can also save it to your Camera Roll!
    </string>
    <string name="listOfParasitesIntroductionText">This App, with the use of machine learning
        technology, can detect up to 10 different species of parasites that are occasionally present
        in human stool (tap on any of them to see detailed information about the parasite):
    </string>
    <string name="Trichuris"><a href="https://en.wikipedia.org/wiki/Trichuris_trichiura">1. Trichuris trichiura</a></string>
    <string name="Ascaris"><a href="https://en.wikipedia.org/wiki/Ascaris_lumbricoides">2. Ascaris lumbricoides</a></string>
    <string name="Uncinaria"><a href="https://en.wikipedia.org/wiki/Uncinaria_stenocephala">3. Uncinaria stenocephala</a></string>
    <string name="Diphyllobothrium"><a href="https://en.wikipedia.org/wiki/Diphyllobothrium">4. Diphyllobothrium latum</a></string>
    <string name="Taenia"><a href="https://en.wikipedia.org/wiki/Taenia_(tapeworm)">5. Taenia</a></string>
    <string name="Balantidium"><a href="https://en.wikipedia.org/wiki/Balantidium_coli">6. Balantidium coli</a></string>
    <string name="Hymenolepis"><a href="https://en.wikipedia.org/wiki/Hymenolepis_nana">7. Hymenolepis nana</a></string>
    <string name="Enterobius"><a href="https://es.wikipedia.org/wiki/Enterobius_vermicularis">8. Enterobius vermicularis</a></string>
    <string name="Amoeba"><a href="https://en.wikipedia.org/wiki/Amoeba">9. Amoeba</a></string>
    <string name="Giardia"><a href="https://es.wikipedia.org/wiki/Giardia_lamblia">10. Giardia lamblia</a></string>
    <string name="backButtonText">BACK</string>
    <string name="loadingText">Loading, please wait.</string>
</resources>